--- a/src/diagramador/latex/templates/braun.cls
+++ b/src/diagramador/latex/templates/braun.cls
@@ -1676,6 +1676,11 @@
 		chem / elements / display-style = ptable,
   }
 
+\DeclareBraunTemplate { flex }
+  {
+    pensi
+  }
+
 \DeclareBraunTemplate { prova }
   {
     pensi,
