--- a/src/diagramador/latex/packages/chemistry.sty
+++ b/src/diagramador/latex/packages/chemistry.sty
@@ -333,6 +333,7 @@
 								table-format = 3.2, 
 								drop-zero-decimal = false 
 							]
+							c
 							c 
 							S[ table-format = 2   ] 
 							S[ 
@@ -354,6 +355,7 @@
 						{ Elemento    } \c_alignment_token 
 						{ Número      } \c_alignment_token 
 						{ Massa~Molar } \c_alignment_token 
+						                \c_alignment_token  
 						{ Elemento    } \c_alignment_token 
 						{ Número      } \c_alignment_token 
 						{ Massa~Molar }
@@ -369,6 +371,7 @@
 						{ Químico }                   \c_alignment_token 
 						{ Atômico }                   \c_alignment_token 
 						{ ( \unit { g.mol^{-1} } ) }  \c_alignment_token  
+						                              \c_alignment_token  
 						{ Químico }                   \c_alignment_token 
 						{ Atômico }                   \c_alignment_token 
 						{ ( \unit { g.mol^{-1} } ) } 
@@ -383,6 +386,7 @@
 							}
 							{
 								\elements_ita_ptable_row:N \l_tmpb_clist 
+								\c_alignment_token
 								\c_alignment_token
 								\elements_ita_ptable_row:N \l_tmpa_clist 
 							}
