--- a/src/diagramador/latex/classes/ita.cls
+++ b/src/diagramador/latex/classes/ita.cls
@@ -29,6 +29,12 @@
 
 \cs_set_eq:NN \familydefault \sfdefault
 
+\mhchemoptions
+  {
+      textfontcommand = \sffamily,
+      mathfontcommand = \mathsf
+  }
+
 \KOMAoptions 
   { 
     DIV = 16, 
