--- a/src/diagramador/latex/packages/chemistry.sty
+++ b/src/diagramador/latex/packages/chemistry.sty
@@ -288,6 +288,7 @@
 	% #1 -> clist com os elementos
 	{
 		\group_begin:
+		\footnotesize
 		\clist_set:Nn \l_tmpa_clist {#1}
 		%% ORDENA
 		\mendeleev_organize_elements:N \l_tmpa_clist
